[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/SF1/Genesis 32X SCD - Shining Force - Battle Backgrounds.png" type="Texture2D" id=1]
[ext_resource path="res://Assets/SF1/Genesis 32X SCD - Shining Force - Battle Foregrounds.png" type="Texture2D" id=2]
[ext_resource path="res://SF1/Spells/Blaze/Blaze.anim" type="Animation" id=3]
[ext_resource path="res://SF1/EnemiesAndBosses/Sniper/BattleAnimations/AttackNormal.anim" type="Animation" id=4]
[ext_resource path="res://General/BattleAttackAnimationPlayer/BattleAttackAnimationPlayer.gd" type="Script" id=5]
[ext_resource path="res://SF1/Characters/Hans/BattleAnimations/AttackNormal/AttackNormal.tres" type="Resource" id=6]
[ext_resource path="res://SF1/EnemiesAndBosses/Goblin/BattleAnimations/AttackNormal/AttackNormal.tres" type="Resource" id=7]
[ext_resource path="res://Assets/SF1/PlayableCharacters/Lowe/Unpromoted_Battle_Sprites.png" type="Texture2D" id=8]
[ext_resource path="res://Assets/SF1/Weapons/Wooden_Rod.png" type="Texture2D" id=9]
[ext_resource path="res://Assets/SF1/Spells/Blaze/BaseFlame.png" type="Texture2D" id=10]
[ext_resource path="res://Shaders/Dissolve.gdshader" type="Shader" id=12]
[ext_resource path="res://SF1/Characters/Lowe/BattleAnimations/Idle.anim" type="Animation" id=13]
[ext_resource path="res://SF1/Spells/Heal/Heal.anim" type="Animation" id=14]
[ext_resource path="res://Assets/SF1/PlayableCharacters/Tao/Unpromoted_Battle_Sprites.png" type="Texture2D" id=15]
[ext_resource path="res://Assets/SF1/EnemiesAndBosses/Sniper/Battle_Sprites.png" type="Texture2D" id=16]
[ext_resource path="res://SF1/EnemiesAndBosses/GiantBat/BattleAnimations/Idle.anim" type="Animation" id=17]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )

[sub_resource type="Animation" id=2]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.6, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.6, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 228, 80 ), Vector2( 266, 48 ), Vector2( 89, 76 ), Vector2( 228, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprite:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.6 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.9, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ Vector2( 254, 100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WeaponSprite:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0, 0.6, 0.9, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0.8 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "internal_signal_attack_frame_reached"
} ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 12 )

[node name="BattleAttackAnimationPlayerRoot" type="Node2D"]
z_index = 2
script = ExtResource( 5 )
character_actor_animation_res = ExtResource( 6 )
enemey_actor_animation_res = ExtResource( 7 )

[node name="EditorHelperToolWrapperNode" type="Node" parent="."]

[node name="TextEdit" type="TextEdit" parent="EditorHelperToolWrapperNode"]
offset_top = -184.0
offset_right = 319.0
offset_bottom = -19.0
text = "To reset the scene back to default for a new 
animation

1. Click the BattleAttackAnimationPlayerRoot to
the left <---

2. Now Click the reset scene checkbox button 
in the inspector --> (button at the top)"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundBlackColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color( 0, 0, 0, 255 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundWrapper" type="Node2D" parent="."]

[node name="CenterSprite" type="Sprite2D" parent="BackgroundWrapper"]
position = Vector2( 128, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
region_rect = Rect2( 0, 0, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightSprite" type="Sprite2D" parent="BackgroundWrapper"]
position = Vector2( 384, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
region_rect = Rect2( 256, 384, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSprite" type="Sprite2D" parent="BackgroundWrapper"]
position = Vector2( -128, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
region_rect = Rect2( 256, 384, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundTween" type="Tween" parent="."]

[node name="ForegroundWrapper" type="Node2D" parent="."]

[node name="CenterSprite" type="Sprite2D" parent="ForegroundWrapper"]
position = Vector2( 128, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
frame = 9
region_rect = Rect2( 256, 384, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightSprite" type="Sprite2D" parent="ForegroundWrapper"]
position = Vector2( 384, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
frame = 9
region_rect = Rect2( 256, 384, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSprite" type="Sprite2D" parent="ForegroundWrapper"]
position = Vector2( -128, 90 )
texture = ExtResource( 1 )
hframes = 2
vframes = 16
frame = 9
region_rect = Rect2( 256, 384, 256, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="ForegroundTween" type="Tween" parent="."]

[node name="CanvasLayerSpellWrapper" type="CanvasLayer" parent="."]

[node name="SpellWrapper" type="Node2D" parent="CanvasLayerSpellWrapper"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayerSpellWrapper/SpellWrapper"]
visible = false
position = Vector2( 79, 92 )
z_index = 1
texture = ExtResource( 10 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayerSpellWrapper/SpellWrapper"]
playback_speed = 2.0
anims/Blaze = ExtResource( 3 )
anims/Heal = ExtResource( 14 )

[node name="CharacterWrapper" type="Node2D" parent="."]

[node name="GroundSprite" type="Sprite2D" parent="CharacterWrapper"]
position = Vector2( 240, 134 )
texture = ExtResource( 2 )
vframes = 9
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CharacterSprite" type="Sprite2D" parent="CharacterWrapper"]
material = SubResource( 1 )
position = Vector2( 240, 92 )
z_index = 1
texture = ExtResource( 8 )
hframes = 4

[node name="WeaponSprite" type="Sprite2D" parent="CharacterWrapper"]
position = Vector2( 214, 108 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterWrapper"]
anims/Idle = ExtResource( 13 )

[node name="CharacterSpriteTween" type="Tween" parent="CharacterWrapper"]

[node name="CharacterWrapperTween" type="Tween" parent="."]

[node name="CharacterTargetWrapper" type="Node2D" parent="."]
position = Vector2( 160, 0 )

[node name="GroundSprite" type="Sprite2D" parent="CharacterTargetWrapper"]
position = Vector2( 240, 134 )
texture = ExtResource( 2 )
vframes = 9
frame = 1

[node name="CharacterSprite" type="Sprite2D" parent="CharacterTargetWrapper"]
position = Vector2( 254, 100 )
z_index = 1
texture = ExtResource( 15 )
hframes = 3

[node name="WeaponSprite" type="Sprite2D" parent="CharacterTargetWrapper"]
position = Vector2( 228, 80 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterTargetWrapper"]
anims/AttackNormal = SubResource( 2 )

[node name="CharacterTargetTween" type="Tween" parent="."]

[node name="EnemeyWrapper" type="Node2D" parent="."]

[node name="EnemeySprite" type="Sprite2D" parent="EnemeyWrapper"]
material = SubResource( 3 )
position = Vector2( 80, 86 )
texture = ExtResource( 16 )
hframes = 4
region_rect = Rect2( 0, 0, 260, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemeyWrapper"]
anims/AttackNormal = ExtResource( 4 )
anims/Idle = ExtResource( 17 )

[node name="EnemeySpriteTween" type="Tween" parent="EnemeyWrapper"]

[node name="EnemeyWrapperTween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlackFadeColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 255, 255, 255, 0 )
offset_right = 320.0
offset_bottom = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BlackFadeTween" type="Tween" parent="CanvasLayer"]
